--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,12 @@
+---
+---
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,500,500italic,400italic,300italic,100italic,700italic);
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
+@import "minima";
+
 button, input[type="button"], input[type="reset"], input[type="submit"] {
   appearance: none;
   background-color: #477dca;
@@ -414,6 +423,7 @@ label.input-label-answer {
 h1 {
   font-size: 4em;
   margin-bottom: 0.1em;
+  font-weight: 500;
 }
 
 h2 {
@@ -604,13 +614,13 @@ ul.icons a {
     margin-bottom: 20px;
     display: block;
     border-radius: 100px;
-    background-image: url("/jg.jpg");
+    background-image: url("/assets/jg.jpg");
     background-size: cover;
     background-position: top left, center center;
     background-repeat: repeat, no-repeat;
-    -moz-box-shadow: inset 0 0 10px #D4D4D4;
-    -webkit-box-shadow: inset 0 0 10px #D4D4D4;
-    box-shadow: inset 0 0 10px #D4D4D4;
+    -moz-box-shadow: inset 0 0 20px #636161;
+    -webkit-box-shadow: inset 0 0 20px #636161;
+    box-shadow: inset 0 0 20px #636161;
 }
 
 .into-text-1 {
@@ -648,4 +658,8 @@ ul.icons a {
     color: inherit;
     font-style: italic;
     font-weight: 300;
+}
+
+.page-content {
+  padding: 0;
 }
