--- a/assets/main.scss
+++ b/assets/main.scss
@@ -131,3 +131,9 @@ ul.icons a {
 .contact a:hover {
   color: #4C4C4C;
 }
+
+p.quote {
+  font-size: 1.6em;
+  font-style: italic;
+  padding: 10px 50px;
+}
